fix: Add gap to the feature sections

--- a/src/components/featured/featured/Feature.modules.css
+++ b/src/components/featured/featured/Feature.modules.css
@@ -101,6 +101,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+        gap: 1rem;
     }
     .featured-container {
         height: 240px;
